Stupid fix for letter spacing issues

--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@
   display: flex;
   align-items: center;
 }
-.landing-banner > .col-md-6 {
+.landing-banner > .container > .row > .col-lg-6 {
   display: flex;
+  flex-direction: column;
   height: 100%;
 }
 .bio-banner {
@@ -148,4 +149,7 @@ a:hover {
 }
 .webring > img {
   height: 100%;
+} 
+.que-2, .que-3, .que-4 {
+  margin-left: -0.27em;
 }
